[gd_scene load_steps=5 format=3 uid="uid://nime23g0ou73"]

[ext_resource type="PackedScene" uid="uid://7x07qi2rmhra" path="res://ttt/player.tscn" id="1_jghvq"]
[ext_resource type="Script" path="res://ttt/world.gd" id="1_yug1o"]
[ext_resource type="PackedScene" uid="uid://b8kgk6jcndfsc" path="res://ttt/ball.tscn" id="3_iqsux"]
[ext_resource type="PackedScene" uid="uid://b127t548sqtxf" path="res://ttt/gool.tscn" id="4_mdae6"]

[node name="world" type="Node2D"]
script = ExtResource("1_yug1o")
metadata/_edit_lock_ = true

[node name="player1" parent="." instance=ExtResource("1_jghvq")]
position = Vector2(71, 332)

[node name="player2" parent="." instance=ExtResource("1_jghvq")]
position = Vector2(1083, 332)

[node name="walls" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls"]
polygon = PackedVector2Array(1, 648, 1152, 648, 1152, 0, 0, 0, 0, 648, -1, 648, -5, -4, 1161, -11, 1155, 651, 1, 649)

[node name="ball" parent="." instance=ExtResource("3_iqsux")]
position = Vector2(538, 338)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = 531.0
offset_top = -15.0
offset_right = 541.0
offset_bottom = 660.0
metadata/_edit_lock_ = true

[node name="bg" type="ColorRect" parent="."]
z_index = -2
offset_left = -18.0
offset_top = -17.0
offset_right = 1174.0
offset_bottom = 667.0
color = Color(0.0235294, 0.0235294, 0.0235294, 1)
metadata/_edit_lock_ = true

[node name="score" type="Label" parent="."]
z_index = 1
offset_left = 306.0
offset_top = -22.0
offset_right = 766.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 71
text = "1                     2"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162
metadata/_edit_lock_ = true

[node name="gool" parent="." instance=ExtResource("4_mdae6")]
position = Vector2(4.92, 333)
metadata/_edit_lock_ = true

[node name="gool2" parent="." instance=ExtResource("4_mdae6")]
position = Vector2(1152, 333)
metadata/_edit_lock_ = true
